<fixed> fix translate class to functional